--- a/calibr8_ds.info.yml
+++ b/calibr8_ds.info.yml
@@ -1,9 +1,8 @@
 name: Calibr8 Display Suite
 description: Display Suite extensions.
 package: Calibr8
-
 type: module
 core: 8.x
-
+version: '8.x-1.0'
 dependencies:
   - ds
