--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     ],
     "require": {
         "drupal/ds": "^3.0",
-        "drupal/field_group": "~1.0"
+        "drupal/field_group": "^3.0"
     }
 }
